test_src/compiler_errors/types/boolean/AndNumberError1.b
class AndNumberError1 {
    void test() {
        println(1 && false);
    }
}
